src/objects/Rating__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Json__c</fullName>
        <label>Json</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vote__c</fullName>
        <label>Vote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rating</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Record_Id__c</columns>
        <columns>Vote__c</columns>
        <columns>Json__c</columns>
        <columns>Participant__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>